# thauma-staff

./: .gitignore  CLAUDE.md  README.md  THAUMA_Documento_Fundacional_v3.md  THAUMA_GUIA_COWORKS.md  skills-lock.json
.claude/agents/: _HIERARQUIA.md  ceo.md  (+1 more)
Gerência de Marketing/: CLAUDE.md
Projetos/Automatização Bruno/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
Projetos/Automatização Bruno/docs/referencias/: master-blueprint-automacao-thauma-v3.html
Projetos/Automatização Bruno/docs/superpowers/plans/: 2026-05-11-automacao-bruno-implementacao.md
Projetos/Automatização Bruno/docs/superpowers/specs/: 2026-05-11-automacao-bruno-design.md
Projetos/Automatização Bruno/scripts/: ingest.py  smoke_apis.py
Projetos/Automatização Bruno/src/: config.py  logging_setup.py  models.py
Projetos/Automatização Bruno/src/ingestion/: geometry_describer.py  pdf_to_png.py
Projetos/Automatização Bruno/src/providers/embedding/: base.py  google.py  openai.py  resilient.py
Projetos/Automatização Bruno/src/providers/llm/: anthropic.py  base.py  openrouter.py  resilient.py
Projetos/Automatização Bruno/src/vectorstore/: base.py  chroma.py
Projetos/Automatização Bruno/tests/: conftest.py
Projetos/Automatização Bruno/tests/fixtures/: .gitignore
Projetos/Automatização Bruno/tests/unit/: test_chroma_store.py  test_config.py  test_geometry_describer.py  test_ingest.py  test_models.py  test_pdf_to_png.py  test_resilient_embedding.py  test_resilient_llm.py
scripts/: daily-sync.ps1  gerar_mesa_redonda.py  gerar_pptx_heads.py  revisao-semanal.ps1
(+52 files in other folders)
