[project]
name = "automacao-bruno"
version = "0.1.0"
description = "POC identificacao de pecas industriais via Telegram + RAG vetorial"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "python-telegram-bot[ext]>=21.0",
    "openpyxl>=3.1.0",
    "structlog>=24.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "tenacity>=9.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
fase-b = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gspread>=6.0",
    "google-auth>=2.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

